--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -7,8 +7,6 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
 dist-ssr
 *.local
 
@@ -22,3 +20,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+venv/
+__pycache__/
+node_modules/
+dist/
+.env
